@@ -2,3 +2,4 @@
 - animeidhentai - main list, pagination, years
 - kissjav - main list, pagination, categories
 - erome - listing
+- sextv - add referer
